added elastic search config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,10 @@ db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=40
 db.default.minConnectionsPerPartition=5
 
+es.clustername = "NewsLeaksCluster"
+es.address = "localhost"
+es.port = 9501
+
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
 scalikejdbc.global.loggingSQLAndTime.logLevel=debug
