--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,7 @@
     "angular-toggle-switch": "~1.3.0"
   },
   "resolutions": {
-    "angular": "1.5.6"
+    "angular": "^1.4.3",
+    "screenfull": "2.0.0"
   }
 }
