SQL log disabled by default

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,7 +60,7 @@ es.clustername = "NewsLeaksCluster"
 es.address = "localhost"
 es.port = 9501
 
-scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.enabled=false
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
 scalikejdbc.global.loggingSQLAndTime.logLevel=debug
 scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
