--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,8 @@
     "sc-date-time": "~1.1.3",
     "angular-d3js": "*",
     "d3": "3.5.17",
+    "vis": "~4.16.1",
+	"angular-visjs": "~4.16.0",
     "angular-bootstrap": "~1.3.3",
     "angular-resizable": "*",
     "bootstrap": "~3.3.6",
@@ -43,7 +45,6 @@
     "angular-file-saver": "~1.1.1",
     "angular-bootstrap-file-field": "0.1.3",
     "angular-awesome-slider": "~2.4.4",
-    "angular-toggle-switch": "~1.3.0"
   },
   "resolutions": {
     "angular": "^1.4.3",
