--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,7 @@ db.default.maxConnectionsPerPartition=40
 db.default.minConnectionsPerPartition=5
 
 es.clustername = "NewsLeaksCluster"
+es.index = "cable"
 es.address = "localhost"
 es.port = 9501
 
