--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "new/s/leak",
-  "description": "Front-End application of NoD",
+  "description": "Front-End application of Newsleak",
   "version": "0.0.2",
-  "homepage": "https://github.com/Tooa/NoDWeb",
+  "homepage": "https://github.com/tudarmstadt-lt/newsleak-frontend",
   "authors": [
     "To be set by next developer"
   ],
-  "license": "Apache Licence 2.0",
+  "license": "GPL V3.0",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -37,7 +37,6 @@
     "angular-bootstrap": "~1.3.3",
     "angular-resizable": "*",
     "bootstrap": "~3.3.6",
-    "datamaps": "~0.4.0",
     "angular-ui-layout": "1.4.2",
     "angular-ui-router": "~0.2.15",
     "angular-ui-bootstrap": "~1.3.3",
