name multiple ES indices for runtime ES switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,7 +57,8 @@ db.default.maxConnectionsPerPartition=40
 db.default.minConnectionsPerPartition=5
 
 es.clustername = "NewsLeaksCluster"
-es.index = "cable"
+es.indices =  [cable, enron]
+es.index.default = "cable"
 es.address = "localhost"
 es.port = 9501
 
