Anzahl der angezeigten Knoten ist jetzt via slider einstellbar Bugfix für: Kanten werden nicht gefunden wenn Startknoten kleinere Id hat als Endknoten

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,9 +46,9 @@ play.i18n.langs= ["en"]
 
 db.default.driver=org.postgresql.Driver
 //TODO: fill in database configuration
-db.default.url="jdbc:postgresql://localhost:5432/database"
-db.default.username=""
-db.default.password=""
+db.default.url="jdbc:postgresql://localhost:5431/cable"
+db.default.username="newsreader"
+db.default.password="newsreader"
 
 db.default.logStatements=true
 db.default.logSql=true
