added multiple dataset options

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,12 +43,21 @@ play.i18n.langs= ["en"]
 
 
 
-
 db.default.driver=org.postgresql.Driver
 //TODO: fill in database configuration
-db.default.url="jdbc:postgresql://localhost:5432/database"
+db.default.url="jdbc:postgresql://localhost:5432/db1"
 db.default.username=""
 db.default.password=""
+
+db.enron.driver=org.postgresql.Driver
+db.enron.url="jdbc:postgresql://localhost:5432/db2"
+db.enron.username=""
+db.enron.password=""
+
+db.cable.driver=org.postgresql.Driver
+db.cable.url="jdbc:postgresql://localhost:5432/db1"
+db.cable.username=""
+db.cable.password=""
 
 db.default.logStatements=true
 db.default.logSql=true
