Guidance benutzt nun ES um Kanten zu bestimmen

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,9 @@ db.default.maxConnectionsPerPartition=40
 db.default.minConnectionsPerPartition=5
 
 es.clustername = "NewsLeaksCluster"
+es.index = "cable"
+es.indices =  [cable, enron]
+#es.index.default = "cable"
 es.address = "localhost"
 es.port = 9501
 
@@ -66,6 +69,7 @@ scalikejdbc.global.loggingSQLAndTime.logLevel=debug
 scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
 scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=5
 scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+
 
 play.modules.enabled += "scalikejdbc.PlayModule"
 
