separate document list and document concerns

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-screenfull": "~0.1.0",
     "angular-moment": "~0.10.2",
     "angular-material": "1.0.9",
+	"angular-material-icons": "0.7.1",
     "highcharts-release": "~4.1.7",
     "requirejs": "~2.1.20",
     "moment": "~2.10.6",
