--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,7 @@
     "angular-ui-bootstrap": "~1.3.3",
     "angular-file-saver": "~1.1.1",
     "angular-bootstrap-file-field": "0.1.3",
-    "angular-awesome-slider": "~2.4.4",
+    "angular-awesome-slider": "~2.4.4"
   },
   "resolutions": {
     "angular": "^1.4.3",
