fixed some bugs and added the beginning for the highlighting system

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,19 +45,19 @@ play.i18n.langs= ["en"]
 
 db.default.driver=org.postgresql.Driver
 //TODO: fill in database configuration
-db.default.url="jdbc:postgresql://localhost:5432/db1"
-db.default.username=""
-db.default.password=""
+db.default.url="jdbc:postgresql://localhost:5431/cable"
+db.default.username="newsreader"
+db.default.password="newsreader"
 
-db.enron.driver=org.postgresql.Driver
-db.enron.url="jdbc:postgresql://localhost:5432/db2"
-db.enron.username=""
-db.enron.password=""
+//db.enron.driver=org.postgresql.Driver
+//db.enron.url="jdbc:postgresql://localhost:5432/db2"
+//db.enron.username=""
+//db.enron.password=""
 
 db.cable.driver=org.postgresql.Driver
-db.cable.url="jdbc:postgresql://localhost:5432/db1"
-db.cable.username=""
-db.cable.password=""
+db.cable.url="jdbc:postgresql://localhost:5431/cable"
+db.cable.username="newsreader"
+db.cable.password="newsreader"
 
 db.default.logStatements=true
 db.default.logSql=true
@@ -66,7 +66,7 @@ db.default.maxConnectionsPerPartition=40
 db.default.minConnectionsPerPartition=5
 
 es.clustername = "NewsLeaksCluster"
-es.indices =  [cable, enron]
+es.indices =  [cable]
 es.index.default = "cable"
 es.address = "localhost"
 es.port = 9501
