Read metadaza exclusion list from application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,12 +42,7 @@ play.i18n.langs= ["en"]
 
 
 
-
-db.default.driver=org.postgresql.Driver
 //TODO: fill in database configuration
-db.default.url="jdbc:postgresql://localhost:5432/db1"
-db.default.username=""
-db.default.password=""
 
 db.enron.driver=org.postgresql.Driver
 db.enron.url="jdbc:postgresql://localhost:5432/db2"
@@ -59,24 +54,26 @@ db.cable.url="jdbc:postgresql://localhost:5432/db1"
 db.cable.username=""
 db.cable.password=""
 
-db.default.logStatements=true
-db.default.logSql=true
-db.default.partitionCount=1
-db.default.maxConnectionsPerPartition=40
-db.default.minConnectionsPerPartition=5
+db.enron.logStatements=true
+db.enron.logSql=true
+db.enron.partitionCount=1
+db.enron.maxConnectionsPerPartition=40
+db.enron.minConnectionsPerPartition=5
+
+db.cable.logStatements=true
+db.cable.logSql=true
+db.cable.partitionCount=1
+db.cable.maxConnectionsPerPartition=40
+db.cable.minConnectionsPerPartition=5
 
 es.clustername = "NewsLeaksCluster"
-es.indices =  [cable, enron]
-es.index.default = "cable"
 es.address = "localhost"
 es.port = 9501
 
-scalikejdbc.global.loggingSQLAndTime.enabled=false
-scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
-scalikejdbc.global.loggingSQLAndTime.logLevel=debug
-scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
-scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=5
-scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+es.indices =  [cable, enron]
+# Determines the default dataset for application
+es.index.default = "cable"
 
-play.modules.enabled += "scalikejdbc.PlayModule"
 
+es.cable.excludeTypes = [Subject, Header, ReferenceId, References, Keywords, Entities, Created, EventTimes]
+es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
