--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,14 +45,14 @@ play.i18n.langs= ["en"]
 //TODO: fill in database configuration
 
 db.enron.driver=org.postgresql.Driver
-db.enron.url="jdbc:postgresql://localhost:5432/db2"
-db.enron.username=""
-db.enron.password=""
+db.enron.url="jdbc:postgresql://localhost:5432/enron"
+db.enron.username="newsreader"
+db.enron.password="newsreader"
 
 db.cable.driver=org.postgresql.Driver
-db.cable.url="jdbc:postgresql://localhost:5432/db1"
-db.cable.username=""
-db.cable.password=""
+db.cable.url="jdbc:postgresql://localhost:5432/cable"
+db.cable.username="newsreader"
+db.cable.password="newsreader"
 
 db.enron.logStatements=true
 db.enron.logSql=true
@@ -72,7 +72,7 @@ es.port = 9501
 
 es.indices =  [cable, enron]
 # Determines the default dataset for application
-es.index.default = "cable"
+es.index.default = "enron"
 
 
 es.cable.excludeTypes = [Subject, Header, ReferenceId, References, Keywords, Entities, Created, EventTimes]
