Read password credentials from file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,13 +34,17 @@ play.i18n.langs= ["en"]
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
+# Authorization
+# ~~~~~
+# 
+authorization.enabled=false
+authorization.password=""
+
 # Database configuration
 # ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-
-
 
 //TODO: fill in database configuration
 
