Define minimal interfaces

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,3 +81,14 @@ es.index.default = "enron"
 
 es.cable.excludeTypes = [Subject, Header, ReferenceId, References, Keywords, Entities, Created, EventTimes]
 es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
+
+scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
+scalikejdbc.global.loggingSQLAndTime.logLevel=debug
+scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=5
+scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+
+play.modules.enabled += "scalikejdbc.PlayModule"
+# scalikejdbc.PlayModule doesn't depend on Play's DBModule
+play.modules.disabled += "play.api.db.DBModule"
