--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "new/s/leak",
-  "description": "Front-End application of Newsleak",
+  "description": "Newsleak application",
   "version": "0.0.1",
   "homepage": "https://github.com/tudarmstadt-lt/newsleak-frontend",
   "authors": [
@@ -22,18 +22,15 @@
     "angular-aria": "^1.4.3",
     "angular-sanitize": "~1.4.3",
     "angular-screenfull": "~0.1.1",
-    "angular-moment": "~0.10.2",
     "angular-material": "1.1.1",
-    "highcharts-release": "~4.1.7",
-    "requirejs": "~2.1.20",
-    "moment": "~2.10.6",
+    "highcharts-release": "~4.2.7",
+    "requirejs": "~2.3.2",
     "underscore": "~1.8.3",
     "screenfull": "~3.0.0",
-    "font-awesome": "~4.3.0",
-    "jquery": "~2.1.4",
-    "jquery-json": "~2.5.1",
-    "angular-d3js": "*",
-    "vis": "~4.16.1",
+    "font-awesome": "~4.7.0",
+    "jquery": "~2.2.4",
+    "jquery-json": "~2.6.0",
+    "vis": "~4.17.0",
     "angular-bootstrap": "~1.3.3",
     "angular-resizable": "*",
     "bootstrap": "~3.3.6",
@@ -41,8 +38,7 @@
     "angular-ui-router": "~0.2.15",
     "angular-ui-bootstrap": "~1.3.3",
     "angular-file-saver": "~1.1.1",
-    "angular-bootstrap-file-field": "0.1.3",
-    "angular-awesome-slider": "~2.4.4"
+    "angular-bootstrap-file-field": "0.1.3"
   },
   "resolutions": {
     "angular": "^1.4.3",
