--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,13 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.4.14",
-    "angular-animate": "^1.4.14",
-    "angular-aria": "^1.4.14",
-    "angular-sanitize": "~1.4.14",
+    "angular": "1.4.14",
+    "angular-animate": "1.4.14",
+    "angular-aria": "1.4.14",
+    "angular-sanitize": "1.4.14",
+	"angular-messages": "1.4.14",
     "angular-screenfull": "~0.1.1",
-    "angular-material": "1.1.1",
+    "angular-material": "~1.1.1",
     "highcharts-release": "~4.2.7",
     "requirejs": "~2.3.2",
     "underscore": "~1.8.3",
@@ -41,7 +42,7 @@
     "angular-bootstrap-file-field": "0.1.3"
   },
   "resolutions": {
-    "angular": "^1.4.14",
+    "angular": "1.4.14",
     "screenfull": "2.0.0"
   }
 }
