--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "jquery-json": "~2.6.0",
     "vis": "~4.17.0",
     "angular-bootstrap": "~1.3.3",
+    "angular-bootstrap-contextmenu": "0.9.9",
     "angular-resizable": "*",
     "bootstrap": "~3.3.6",
     "angular-ui-layout": "1.4.2",
