--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,29 +50,41 @@ authorization.password=""
 # By convention, the default datasource is named `default`
 #
 
-
-db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
-db.newsleak.username="newsreader"
-db.newsleak.password="newsreader"
-
-
+#####
+#db.newsleak.driver=org.postgresql.Driver
+#db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
+#db.newsleak.username="newsreader"
+#db.newsleak.password="newsreader"
 
 
-db.newsleak.logStatements=true
-db.newsleak.logSql=true
-db.newsleak.partitionCount=1
-db.newsleak.maxConnectionsPerPartition=40
-db.newsleak.minConnectionsPerPartition=5
+#db.newsleak.logStatements=true
+#db.newsleak.logSql=true
+#db.newsleak.partitionCount=1
+#db.newsleak.maxConnectionsPerPartition=40
+#db.newsleak.minConnectionsPerPartition=5
+######
+
+db.enron.driver = org.postgresql.Driver
+db.enron.url = "jdbc:postgresql://localhost:5432/enron"
+db.enron.username = "newsreader"
+db.enron.password = "newsreader"
+
+db.enron.logStatements = true
+db.enron.logSql = true
+db.enron.partitionCount = 1
+db.enron.maxConnectionsPerPartition = 40
+db.enron.minConnectionsPerPartition = 5
 
 
 es.clustername = "NewsLeaksCluster"
 es.address = "localhost"
 es.port = 9501
 
-es.indices =  [newsleak]
+#es.indices =  [newsleak]
+es.indices = [enron]
 # Determines the default dataset for application
-es.index.default = "newsleak"
+#es.index.default = "newsleak"
+es.index.default = "enron"
 
 
 es.newsleak.excludeTypes = []
