Keyword Relation Edges

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,7 +87,7 @@ es.indices = [enron]
 es.index.default = "enron"
 
 
-es.newsleak.excludeTypes = []
+es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
 
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
