Revert some changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,12 +25,12 @@ play.i18n.langs= ["en"]
 # Default to Global in the root package.
 # application.global=Global
 
-# Router 
+# Router
 # ~~~~~
 # Define the Router object to use for this application.
 # This router will be looked up first when the application is starting up,
-# so make sure this is the entry point. 
-# Furthermore, it's assumed your route file is named properly. 
+# so make sure this is the entry point.
+# Furthermore, it's assumed your route file is named properly.
 # So for an application router like `my.application.Router`,
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
@@ -39,43 +39,55 @@ play.i18n.langs= ["en"]
 
 # Authorization
 # ~~~~~
-# 
+#
 authorization.enabled=false
 authorization.password=""
 
 
 # Database configuration
-# ~~~~~ 
+# ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
 
-
-db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
-db.newsleak.username="newsreader"
-db.newsleak.password="newsreader"
-
-
+#####
+#db.newsleak.driver=org.postgresql.Driver
+#db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
+#db.newsleak.username="newsreader"
+#db.newsleak.password="newsreader"
 
 
-db.newsleak.logStatements=true
-db.newsleak.logSql=true
-db.newsleak.partitionCount=1
-db.newsleak.maxConnectionsPerPartition=40
-db.newsleak.minConnectionsPerPartition=5
+#db.newsleak.logStatements=true
+#db.newsleak.logSql=true
+#db.newsleak.partitionCount=1
+#db.newsleak.maxConnectionsPerPartition=40
+#db.newsleak.minConnectionsPerPartition=5
+######
+
+db.enron.driver = org.postgresql.Driver
+db.enron.url = "jdbc:postgresql://localhost:5432/enron"
+db.enron.username = "newsreader"
+db.enron.password = "newsreader"
+
+db.enron.logStatements = true
+db.enron.logSql = true
+db.enron.partitionCount = 1
+db.enron.maxConnectionsPerPartition = 40
+db.enron.minConnectionsPerPartition = 5
 
 
 es.clustername = "NewsLeaksCluster"
 es.address = "localhost"
 es.port = 9501
 
-es.indices =  [newsleak]
+#es.indices =  [newsleak]
+es.indices = [enron]
 # Determines the default dataset for application
-es.index.default = "newsleak"
+#es.index.default = "newsleak"
+es.index.default = "enron"
 
 
-es.newsleak.excludeTypes = []
+es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
 
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
