--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "angular-ui-router": "~0.2.15",
     "angular-ui-bootstrap": "~1.3.3",
     "angular-file-saver": "~1.1.1",
-    "angular-bootstrap-file-field": "0.1.3"
+    "angular-bootstrap-file-field": "0.1.3",
+    "elasticsearch": "~13.2.0"
   },
   "resolutions": {
     "angular": "1.4.14",
