Correct ports for elasticsearch client

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,6 +79,7 @@ db.enron.minConnectionsPerPartition = 5
 es.clustername = "NewsLeaksCluster"
 es.address = "localhost"
 es.port = 9501
+es.httpPort = 9500
 
 #es.indices =  [newsleak]
 es.indices = [enron]
