--- a/preproc/pom.xml
+++ b/preproc/pom.xml
@@ -111,7 +111,12 @@
 			<version>2.2.1</version>
 		</dependency>
 		<!-- keyword extraction -->
-
+		<dependency>
+			<groupId>com.sree.textbytes</groupId>
+       	   <artifactId>jtopia</artifactId>
+       	   <version>0.0.3</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
