--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -16,6 +16,12 @@
 		<uimafitDependencyVersion>2.4.0</uimafitDependencyVersion>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -45,6 +51,11 @@
 			<version>${uimafitDependencyVersion}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>uimafit-examples</artifactId>
+			<version>${uimafitDependencyVersion}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.4</version>
@@ -64,5 +75,18 @@
 			<artifactId>opennlp-uima</artifactId>
 			<version>1.8.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.heideltime</groupId>
+			<artifactId>heideltime</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.tudarmstadt-lt</groupId>
+			<artifactId>GermaNER</artifactId>
+			<version>germanner-0.1.0</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
