--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -9,11 +9,14 @@ dbpass = newsreader
 dbaddress = localhost:5432
 
 defaultlanguage = en
-datadirectory = ./data
-documentfile = document.csv
-metadatafile = metadata.csv
+#datadirectory = ./data
+datadirectory = /Users/gwiedemann/Docker/newsleak/newsleakpipeline
+#documentfile = document.csv
+documentfile = document_enron.csv
+#metadatafile = metadata.csv
+metadatafile = metadata_enron.csv
 
-threads = 10
+threads = 4
 
 ################################
 ##   HEIDELTIME CONFIG          ##
