basic pipeline filesystem in/out

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -9,12 +9,16 @@ dbpass = newsreader
 dbaddress = localhost:5432
 
 defaultlanguage = en
-#datadirectory = ./data
-datadirectory = /Users/gwiedemann/Docker/newsleak/newsleakpipeline
-#documentfile = document.csv
-documentfile = document_enron.csv
-#metadatafile = metadata.csv
-metadatafile = metadata_enron.csv
+datadirectory = ./data
+#datadirectory = /Users/gwiedemann/Docker/newsleak/newsleakpipeline
+documentfile = document.csv
+#documentfile = document_enron.csv
+metadatafile = metadata.csv
+#metadatafile = metadata_enron.csv
+
+esclustername = docker-cluster
+esindex = newsleak
+esport = 9300
 
 threads = 4
 
