--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -87,6 +87,16 @@
 			<version>germanner-0.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>6.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+			<version>6.0.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
