downgrade elasticsearch to 2.4

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -16,7 +16,8 @@ documentfile = document.csv
 metadatafile = metadata.csv
 #metadatafile = metadata_enron.csv
 
-esclustername = docker-cluster
+# esclustername = docker-cluster
+esclustername = elasticsearch
 esindex = newsleak
 esport = 9300
 
