--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -5,7 +5,19 @@
 	<groupId>newsleak</groupId>
 	<artifactId>preprocessing</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
 	<name>preprocessing</name>
 	<url>http://maven.apache.org</url>
@@ -90,6 +102,12 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
 			<version>6.0.1</version>
 		</dependency>
 		<dependency>
@@ -97,6 +115,7 @@
 			<artifactId>transport</artifactId>
 			<version>6.0.1</version>
 		</dependency>
+		-->
 
 	</dependencies>
 </project>
