annotation to postgres integration

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -2,11 +2,13 @@
 ##     NEWSLEAK CONFIG          ##
 ################################
 
-dbname = newsleak
 indexname = newsleak
+
+dbname = newsleak
 dbuser = newsreader
 dbpass = newsreader
-dbaddress = localhost:5432
+dburl = localhost:5432
+dbschema = desc/postgresSchema.sql
 
 defaultlanguage = en
 datadirectory = ./data
