pipeline english working

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -9,14 +9,16 @@ dbuser = newsreader
 dbpass = newsreader
 dburl = localhost:5432
 dbschema = desc/postgresSchema.sql
+dbindices = desc/postgresIndices.sql
 
 defaultlanguage = en
-datadirectory = ./data
-#datadirectory = /Users/gwiedemann/Docker/newsleak/newsleakpipeline
-documentfile = document.csv
-#documentfile = document_enron.csv
-metadatafile = metadata.csv
-#metadatafile = metadata_enron.csv
+#datadirectory = ./data
+#documentfile = document.csv
+#metadatafile = metadata.csv
+
+datadirectory = /Users/gwiedemann/Data/Enron
+documentfile = document_enron.csv
+metadatafile = metadata_enron.csv
 
 # esclustername = docker-cluster
 esclustername = elasticsearch
