--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -15,6 +15,19 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>uhh_lt.newsleak.preprocessing.Preprocessor</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<packaging>jar</packaging>
@@ -27,6 +40,8 @@
 		<uimaDependencyVersion>2.10.2</uimaDependencyVersion>
 		<uimafitDependencyVersion>2.4.0</uimafitDependencyVersion>
 	</properties>
+
+
 
 	<repositories>
 		<repository>
