--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,14 +70,20 @@ db.cable.partitionCount=1
 db.cable.maxConnectionsPerPartition=40
 db.cable.minConnectionsPerPartition=5
 
-es.clustername = "NewsLeaksCluster"
-es.address = "localhost"
-es.port = 9501
+db.newsleak.driver=org.postgresql.Driver
+db.newsleak.url="jdbc:postgresql://newsleak-postgres:5432/newsleak"
+db.newsleak.username="newsreader"
+db.newsleak.password="newsreader"
 
-es.indices =  [cable, enron]
+es.clustername = "elasticsearch"
+es.address = "newsleak-elasticsearch"
+es.port = 9300
+
+es.indices =  [newsleak]
 # Determines the default dataset for application
-es.index.default = "enron"
+es.index.default = "newsleak"
 
+es.newsleak.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
 
 es.cable.excludeTypes = [Subject, Header, ReferenceId, References, Keywords, Entities, Created, EventTimes]
 es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
