elasticsearch host parameter

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -7,20 +7,16 @@ indexname = newsleak
 dbname = newsleak
 dbuser = newsreader
 dbpass = newsreader
-dburl = localhost:5432
+dburl = newsleak-postgres:5432
 dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
 defaultlanguage = en
-#datadirectory = ./data
-#documentfile = document.csv
-#metadatafile = metadata.csv
+datadirectory = /opt/newsleak-data
+documentfile = document.csv
+metadatafile = metadata.csv
 
-datadirectory = /Users/gwiedemann/Data/Enron
-documentfile = document_enron.csv
-metadatafile = metadata_enron.csv
-
-# esclustername = docker-cluster
+esurl = newsleak-elasticsearch
 esclustername = elasticsearch
 esindex = newsleak
 esport = 9300
