default config example data

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -12,7 +12,7 @@ dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
 defaultlanguage = en
-datadirectory = /opt/newsleak-data
+datadirectory = ./data
 documentfile = document.csv
 metadatafile = metadata.csv
 
