default config max documents for csv reader

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -22,6 +22,7 @@ esindex = newsleak
 esport = 9300
 
 threads = 4
+debugMaxDocuments = 0
 
 ################################
 ##   HEIDELTIME CONFIG          ##
