--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,9 +3,9 @@
 
 # Production mode settings
 # ~~~~~
-#application.mode=PROD
-#XForwardedSupport="127.0.0.1"
-#play.http.context="/noden/"
+# application.mode=PROD
+# XForwardedSupport="127.0.0.1"
+# play.http.context="/noden/"
 
 # Secret key
 # ~~~~~
@@ -46,30 +46,6 @@ authorization.password=""
 # By convention, the default datasource is named `default`
 #
 
-//TODO: fill in database configuration
-
-db.enron.driver=org.postgresql.Driver
-db.enron.url="jdbc:postgresql://localhost:5432/enron"
-db.enron.username="newsreader"
-db.enron.password="newsreader"
-
-db.cable.driver=org.postgresql.Driver
-db.cable.url="jdbc:postgresql://localhost:5432/cable"
-db.cable.username="newsreader"
-db.cable.password="newsreader"
-
-db.enron.logStatements=true
-db.enron.logSql=true
-db.enron.partitionCount=1
-db.enron.maxConnectionsPerPartition=40
-db.enron.minConnectionsPerPartition=5
-
-db.cable.logStatements=true
-db.cable.logSql=true
-db.cable.partitionCount=1
-db.cable.maxConnectionsPerPartition=40
-db.cable.minConnectionsPerPartition=5
-
 db.newsleak.driver=org.postgresql.Driver
 db.newsleak.url="jdbc:postgresql://newsleak-postgres:5432/newsleak"
 db.newsleak.username="newsreader"
@@ -83,10 +59,7 @@ es.indices =  [newsleak]
 # Determines the default dataset for application
 es.index.default = "newsleak"
 
-es.newsleak.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
-
-es.cable.excludeTypes = [Subject, Header, ReferenceId, References, Keywords, Entities, Created, EventTimes]
-es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
+es.newsleak.excludeTypes = [SUBJECT, HEADER, FILENAME, PATH, Subject, Timezone, sender.id, Recipients.id, Recipients.order]
 
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
