--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -113,6 +113,11 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.heideltime</groupId>
 			<artifactId>heideltime</artifactId>
 			<version>2.2.1</version>
