config file updated

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -11,6 +11,8 @@ dburl = newsleak-postgres:5432
 dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
+datareader = csv
+
 defaultlanguage = en
 datadirectory = ./data
 documentfile = document.csv
@@ -21,87 +23,14 @@ esclustername = elasticsearch
 esindex = newsleak
 esport = 9300
 
+hooverclustername = elasticsearch
+hooverurl = localhost
+hooverindex = test
+hooverport = 9301
+hoovertmpmetadata = hoover_metadata.csv
+
+nerserviceurl = localhost:5001
+
 threads = 4
 debugMaxDocuments = 0
 
-################################
-##   HEIDELTIME CONFIG          ##
-################################
-# Consideration of different timex3-types
-# Date
-considerDate = true
-
-# Duration
-considerDuration = true
-
-# Set
-considerSet = true
-
-# Time
-considerTime = true
-
-# Time
-Type = news
-
-# Temponyms (make sure you know what you do if you set this to "true")
-considerTemponym = false
-
-###################################
-# Path to TreeTagger home directory
-###################################
-# Ensure there is no white space in path (try to escape white spaces)
-treeTaggerHome =TreeTager
-# This one is only necessary if you want to process chinese documents.
-chineseTokenizerPath = SET ME IN CONFIG.PROPS!
-
-##################################
-# paths to JVnTextPro model paths:
-##################################
-sent_model_path = SET ME IN CONFIG.PROPS!
-word_model_path = SET ME IN CONFIG.PROPS!
-pos_model_path = SET ME IN CONFIG.PROPS!
-
-#####################################################
-# paths to Stanford POS Tagger model or config files:
-#####################################################
-model_path = SET ME IN CONFIG.PROPS!
-# leave this unset if you do not need one
-config_path = 
-
-########################################
-## paths to hunpos and its tagger files:
-########################################
-hunpos_path = SET ME IN CONFIG.PROPS!
-hunpos_model_name = SET ME IN CONFIG.PROPS!
-
-
-
-# DO NOT CHANGE THE FOLLOWING
-################################
-# Relative path of type system in HeidelTime home directory
-typeSystemHome = desc/type/HeidelTime_TypeSystem.xml
-
-# Relative path of dkpro type system in HeidelTime home directory
-typeSystemHome_DKPro = desc/type/DKPro_TypeSystem.xml
-
-# Name of uima-context variables...
-# ...for date-consideration
-uimaVarDate = Date
-
-# ...for duration-consideration
-uimaVarDuration = Duration
-
-# ...for language
-uimaVarLanguage = Language
-
-# ...for set-consideration
-uimaVarSet = Set
-
-# ...for time-consideration
-uimaVarTime = Time
-
-# ...for temponym-consideration
-uimaVarTemponym = Temponym
-
-# ...for type to process
-uimaVarTypeToProcess = Type
