key term extraction, dictionary annotation

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -11,9 +11,10 @@ dburl = newsleak-postgres:5432
 dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
+processlanguages = eng, deu, ita
+defaultlanguage = en
 datareader = csv
 
-defaultlanguage = en
 datadirectory = ./data
 documentfile = document.csv
 metadatafile = metadata.csv
@@ -29,6 +30,7 @@ hooverindex = test
 hooverport = 9301
 hoovertmpmetadata = hoover_metadata.csv
 
+dictionaryfiles = spam.all, deu:fuck.deu, eng:fuck.eng, ita:fuck.ita
 nerserviceurl = localhost:5001
 
 threads = 4
