--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -134,14 +134,17 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>2.4.6</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch</artifactId> 
-			<version>6.0.1</version> </dependency> <dependency> <groupId>org.elasticsearch.client</groupId> 
-			<artifactId>transport</artifactId> <version>6.0.1</version> </dependency> -->
 
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.rholder</groupId>
+			<artifactId>snowball-stemmer</artifactId>
+			<version>1.3.0.581.1</version>
 		</dependency>
 
 	</dependencies>
