--- a/preprocessing/pom.xml
+++ b/preprocessing/pom.xml
@@ -146,6 +146,19 @@
 			<artifactId>snowball-stemmer</artifactId>
 			<version>1.3.0.581.1</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>60.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.uhh-lt</groupId>
+			<artifactId>lt-keyterms</artifactId>
+			<version>7373b8fc5f</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
