--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,29 +51,29 @@ authorization.password=""
 #
 
 #####
-#db.newsleak.driver=org.postgresql.Driver
-#db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
-#db.newsleak.username="newsreader"
-#db.newsleak.password="newsreader"
+db.newsleak.driver=org.postgresql.Driver
+db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
+db.newsleak.username="newsreader"
+db.newsleak.password="newsreader"
 
 
-#db.newsleak.logStatements=true
-#db.newsleak.logSql=true
-#db.newsleak.partitionCount=1
-#db.newsleak.maxConnectionsPerPartition=40
-#db.newsleak.minConnectionsPerPartition=5
+db.newsleak.logStatements=true
+db.newsleak.logSql=true
+db.newsleak.partitionCount=1
+db.newsleak.maxConnectionsPerPartition=40
+db.newsleak.minConnectionsPerPartition=5
 ######
 
-db.enron.driver = org.postgresql.Driver
-db.enron.url = "jdbc:postgresql://localhost:5432/enron"
-db.enron.username = "newsreader"
-db.enron.password = "newsreader"
+#db.enron.driver = org.postgresql.Driver
+#db.enron.url = "jdbc:postgresql://localhost:5432/enron"
+#db.enron.username = "newsreader"
+#db.enron.password = "newsreader"
 
-db.enron.logStatements = true
-db.enron.logSql = true
-db.enron.partitionCount = 1
-db.enron.maxConnectionsPerPartition = 40
-db.enron.minConnectionsPerPartition = 5
+#db.enron.logStatements = true
+#db.enron.logSql = true
+#db.enron.partitionCount = 1
+#db.enron.maxConnectionsPerPartition = 40
+#db.enron.minConnectionsPerPartition = 5
 
 
 es.clustername = "NewsLeaksCluster"
@@ -81,14 +81,14 @@ es.address = "localhost"
 es.port = 9501
 es.httpPort = 9500
 
-#es.indices =  [newsleak]
-es.indices = [enron]
+es.indices =  [newsleak]
+#es.indices = [enron]
 # Determines the default dataset for application
-#es.index.default = "newsleak"
-es.index.default = "enron"
+es.index.default = "newsleak"
+#es.index.default = "enron"
 
 
-es.enron.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
+es.newsleak.excludeTypes = [Subject, Timezone, sender.id, Recipients.id, Recipients.order]
 
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
