standard properties file updated

--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -11,8 +11,9 @@ dburl = newsleak-postgres:5432
 dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
-processlanguages = eng, deu, ita
+processlanguages = eng, deu
 defaultlanguage = en
+paragraphsasdocuments = false
 datareader = csv
 
 datadirectory = ./data
@@ -25,14 +26,14 @@ esindex = newsleak
 esport = 9300
 
 hooverclustername = elasticsearch
-hooverurl = localhost
+hooverurl = search-es
 hooverindex = test
-hooverport = 9301
+hooverport = 9300
 hoovertmpmetadata = hoover_metadata.csv
 
-dictionaryfiles = spam.all, deu:fuck.deu, eng:fuck.eng, ita:fuck.ita
+dictionaryfiles = fck.all, deu:fck.deu, eng:fck.eng
 nerserviceurl = localhost:5001
 
 threads = 4
-debugMaxDocuments = 0
+debugMaxDocuments = 2
 
