resources config updated

--- a/preprocessing/resources/deu/resources.conf
+++ b/preprocessing/resources/deu/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = de-sent.bin
 openNlpTokenModel = de-token.bin
 openNlpPosModel = de-pos-maxent.bin
-heideltimeLanguage = german
+heideltimeLanguage = auto-german
 heideltimeLocale = en_US
 nounpostag = NN
