--- a/preprocessing/resources/fra/resources.conf
+++ b/preprocessing/resources/fra/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = fr-sent.bin
 openNlpTokenModel = fr-token.bin
 openNlpPosModel = fr-pos-maxent.bin
-heideltimeLanguage = french
+heideltimeLanguage = auto-french
 heideltimeLocale = en_US
 nounpostag = NOM
