--- a/preprocessing/resources/ita/resources.conf
+++ b/preprocessing/resources/ita/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = it-sent.bin
 openNlpTokenModel = it-token.bin
 openNlpPosModel = it-pos-maxent.bin
-heideltimeLanguage = italian
+heideltimeLanguage = auto-italian
 heideltimeLocale = en_US
 nounpostag = Ss|Sp|Sn
