--- a/preprocessing/resources/spa/resources.conf
+++ b/preprocessing/resources/spa/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = es-sent.bin
 openNlpTokenModel = es-token.bin
 openNlpPosModel = es-pos-maxent.bin
-heideltimeLanguage = spanish
+heideltimeLanguage = auto-spanish
 heideltimeLocale = en_US
 nounpostag = NOUN
