--- a/preprocessing/resources/eng/resources.conf
+++ b/preprocessing/resources/eng/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = en-sent.bin
 openNlpTokenModel = en-token.bin
 openNlpPosModel = en-pos-maxent.bin
-heideltimeLanguage = english
+heideltimeLanguage = auto-english
 heideltimeLocale = en_US
 nounpostag = NN
