--- a/preprocessing/resources/por/resources.conf
+++ b/preprocessing/resources/por/resources.conf
@@ -1,6 +1,6 @@
 openNlpSentenceModel = pt-sent.bin
 openNlpTokenModel = pt-token.bin
 openNlpPosModel = pt-pos-maxent.bin
-heideltimeLanguage = portuguese
+heideltimeLanguage = auto-portuguese
 heideltimeLocale = en_US
 nounpostag = N
