application.conf for two and more indices

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,31 +40,43 @@ play.i18n.langs= ["en"]
 # Authorization
 # ~~~~~
 #
-authorization.enabled=false
-authorization.password=""
+authorization.enabled=true
+authorization.login="user"
+authorization.password="password"
 
 
-# Database configuration
+# Data Source Configuration
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
 
-db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://newsleak-postgres:5432/newsleak"
-db.newsleak.username="newsreader"
-db.newsleak.password="newsreader"
-
+# Available ES collections (provide db.* and es.* configuration for each collection)
+es.indices =  [newsleak,newsleak2]
+# ES connection
 es.clustername = "elasticsearch"
-es.address = "newsleak-elasticsearch"
+es.address = "localhost"
 es.port = 9300
 
-es.indices =  [newsleak]
 # Determines the default dataset for application
 es.index.default = "newsleak"
 
-es.newsleak.excludeTypes = [SUBJECT, HEADER, FILENAME, PATH, Subject, Timezone, sender.id, Recipients.id, Recipients.order]
+# collection 1
+db.newsleak.driver=org.postgresql.Driver
+db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
+db.newsleak.username="newsreader"
+db.newsleak.password="newsreader"
+es.newsleak.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
 
+# collection 2
+db.newsleak2.driver=org.postgresql.Driver
+db.newsleak2.url="jdbc:postgresql://localhost:5432/newsleak2"
+db.newsleak2.username="newsreader"
+db.newsleak2.password="newsreader"
+es.newsleak2.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
+
+# --------------------
+# Other configurations
 scalikejdbc.global.loggingSQLAndTime.enabled=true
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
 scalikejdbc.global.loggingSQLAndTime.logLevel=debug
