--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,29 +51,50 @@ authorization.password="password"
 # By convention, the default datasource is named `default`
 #
 
-# Available ES collections (provide db.* and es.* configuration for each collection)
-es.indices =  [newsleak,newsleak2]
+# Available ES collections (provide db.* configuration for each collection below)
+es.indices =  [newsleak,newsleak2,newsleak3,newsleak4,newsleak5]
 # ES connection
 es.clustername = "elasticsearch"
-es.address = "localhost"
+es.address = "newsleak-elasticsearch"
 es.port = 9300
 
-# Determines the default dataset for application
+# Determine the default dataset for the application
 es.index.default = "newsleak"
 
 # collection 1
 db.newsleak.driver=org.postgresql.Driver
-db.newsleak.url="jdbc:postgresql://localhost:5432/newsleak"
+db.newsleak.url="jdbc:postgresql://newsleak-postgres:5432/newsleak"
 db.newsleak.username="newsreader"
 db.newsleak.password="newsreader"
 es.newsleak.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
 
 # collection 2
 db.newsleak2.driver=org.postgresql.Driver
-db.newsleak2.url="jdbc:postgresql://localhost:5432/newsleak2"
+db.newsleak2.url="jdbc:postgresql://newsleak-postgres:5432/newsleak2"
 db.newsleak2.username="newsreader"
 db.newsleak2.password="newsreader"
 es.newsleak2.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
+
+# collection 3
+db.newsleak3.driver=org.postgresql.Driver
+db.newsleak3.url="jdbc:postgresql://newsleak-postgres:5432/newsleak3"
+db.newsleak3.username="newsreader"
+db.newsleak3.password="newsreader"
+es.newsleak3.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
+
+# collection 4
+db.newsleak4.driver=org.postgresql.Driver
+db.newsleak4.url="jdbc:postgresql://newsleak-postgres:5432/newsleak4"
+db.newsleak4.username="newsreader"
+db.newsleak4.password="newsreader"
+es.newsleak4.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
+
+# collection 5
+db.newsleak5.driver=org.postgresql.Driver
+db.newsleak5.url="jdbc:postgresql://newsleak-postgres:5432/newsleak5"
+db.newsleak5.username="newsreader"
+db.newsleak5.password="newsreader"
+es.newsleak5.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subject,Timezone,sender.id,Recipients.id,Recipients.order]
 
 # --------------------
 # Other configurations
