--- a/preprocessing/conf/newsleak.properties
+++ b/preprocessing/conf/newsleak.properties
@@ -1,39 +1,40 @@
 ################################
-##     NEWSLEAK CONFIG          ##
+##     NEWSLEAK CONFIG        ##
 ################################
 
-indexname = newsleak
+processlanguages = eng, deu
+defaultlanguage = eng
+paragraphsasdocuments = false
+dictionaryfiles = fck.all, deu:fck.deu, eng:fck.eng
+datareader = hoover
 
+# Newsleak postgres
+dburl = newsleak-postgres:5432
 dbname = newsleak
 dbuser = newsreader
 dbpass = newsreader
-dburl = newsleak-postgres:5432
 dbschema = desc/postgresSchema.sql
 dbindices = desc/postgresIndices.sql
 
-processlanguages = eng, deu
-defaultlanguage = en
-paragraphsasdocuments = false
-datareader = csv
+# Newsleak elasticsearch index
+esindex = newsleak
+esurl = newsleak-elasticsearch
+esclustername = elasticsearch
+esport = 9300
 
+# CSV datareader options
 datadirectory = ./data
 documentfile = document.csv
 metadatafile = metadata.csv
 
-esurl = newsleak-elasticsearch
-esclustername = elasticsearch
-esindex = newsleak
-esport = 9300
-
+# Hoover datareader options
+hooverindex = testcollection
 hooverclustername = elasticsearch
 hooverurl = search-es
-hooverindex = test
 hooverport = 9300
 hoovertmpmetadata = hoover_metadata.csv
 
-dictionaryfiles = fck.all, deu:fck.deu, eng:fck.eng
-nerserviceurl = localhost:5001
-
+# Other options
+nerserviceurl = newsleak-ner:5001
 threads = 4
-debugMaxDocuments = 2
-
+debugMaxDocuments = 0
