--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,7 @@
 
 # Production mode settings
 # ~~~~~
-# application.mode=PROD
+application.mode=PROD
 # XForwardedSupport="127.0.0.1"
 # play.http.context="/noden/"
 
@@ -98,10 +98,10 @@ es.newsleak5.excludeTypes = [Link,Filename,Path,Content-type,SUBJECT,HEADER,Subj
 
 # --------------------
 # Other configurations
-scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.enabled=false
 scalikejdbc.global.loggingSQLAndTime.singleLineMode=false
-scalikejdbc.global.loggingSQLAndTime.logLevel=debug
-scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+scalikejdbc.global.loggingSQLAndTime.logLevel=info
+scalikejdbc.global.loggingSQLAndTime.warningEnabled=false
 scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=5
 scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
 
